# celery_tutorial

./: db.sqlite3  pyproject.toml  tasks.py
celery_tutorial/: celery.py  settings.py  urls.py
